--- a/JAVA SCRIPT CONCEPTS/11th June/Add-to-cart.html
+++ b/JAVA SCRIPT CONCEPTS/11th June/Add-to-cart.html
@@ -31,10 +31,10 @@
   </head>
   <body>
     <div class="container text-center">
-      <h2 id="title"></h2>
-      <input type="text" id="input" />
-      <button onclick="listValue()" class="bg-primary text-light">Add</button>
-      <h5 id="heading"></h5>
+      <h2 id="title">Add To Cart</h2>
+      <input type="text" id="cartItemTextInput" />
+      <button onclick="addItems()" class="bg-primary text-light">Add</button>
+      <h5 id="heading">My Cart Items</h5>
     </div>
     <div class="text-center" id="listupdate"></div>
   </body>
