--- a/JAVA SCRIPT CONCEPTS/11th June/Grocery-list.html
+++ b/JAVA SCRIPT CONCEPTS/11th June/Grocery-list.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div>
-      <h1 id="title" class="text-center"></h1>
+      <h1 id="title" class="text-center">Grocery List"</h1>
       <div class="container">
         <div><ul id="list"></ul></div>
       </div>
